--- a/name.html
+++ b/name.html
@@ -5,13 +5,13 @@
 <h2>陽光雙帥</h2>
 
 <button onclick="myFunction()">Try it</button>
-<p id="demo2" style="font-size:30px"></p>
+<p id="demo2" style="font-size:60px"></p>
 
 <script>
 var names = ["吳", "思", "賢"];
 var names2 = ['昌', '忱', '承', '忡', '初', '垂', '兒', '庚', '金', '侃', '刻', '青', '尚', '社', '使', '始', '事', '受', '抒', '所', '兔', '昔', '些', '侄', '周', '宙', '宗', '昂', '板', '東', '枋', '斧', '固', '乖', '官', '果', '杭', '季', '佳', '京', '居', '具', '肯', '快', '枚', '其', '奇', '欣', '宜', '岸', '版', '表', '秉', '並', '帛', '房', '氛', '府', '岡', '和', '虎', '門', '明', '沐', '牧', '沛', '佩', '朋', '武', '物', '弦', '享', '協', '幸', '沂', '雨', '沅', '哎', '長', '到', '的', '狄', '典', '定', '咚', '昉', '炅', '昊', '侖', '旻', '念', '罔', '昕', '易', '爭', '政', '知', '直', '制', '忠', '艾', '礬', '附', '坤', '坪', '坡', '坦', '宛', '亞', '依', '詠', '侑', '於', '臾', '昀']
 
-var names3 = ['倉', '宸', '乘', '純', '琺', '剛', '倪', '閃', '剡', '扇', '射', '珅', '神', '師', '十', '時', '書', '索', '席', '修', '宰', '釗', '座', '桉', '柏', '柏', '芳', '芬', '粉', '芙', '高', '格', '恭', '拱', '貢', '桓', '恢', '記', '珈', '兼', '衿', '徑', '俱', '倨', '娟', '雋', '珂', '庫', '豈', '起', '栩', '椏', '原', '紜', '班', '畢', '紡', '舫', '紛', '俯', '航', '恆', '候', '洹', '洄', '務', '效', '訓', '衍', '洋', '晉', '朗', '烙', '料', '烈', '旅', '倫', '能', '朔', '特', '庭', '夏', '訊', '迅', '秧', '展', '珍', '朕', '案', '城', '恩', '容', '軒', '宴', '晏', '益', '祐', '育', '員'];
+var names3 = ['倉', '宸', '乘', '純', '琺', '剛', '倪', '閃', '剡', '扇', '珅', '神', '師', '時', '書', '索', '席', '修', '宰', '釗', '座', '桉', '柏', '柏', '芳', '芬', '芙', '高', '格', '恭', '拱', '桓', '恢', '記', '珈', '兼', '衿', '徑', '俱', '倨', '雋', '珂', '庫', '豈', '起', '栩', '椏', '原', '紜', '班', '畢', '紡', '舫', '紛', '俯', '航', '恆', '候', '洹', '洄', '務', '效', '訓', '衍', '洋', '晉', '朗', '烙', '料', '烈', '旅', '倫', '能', '朔', '特', '庭', '夏', '訊', '迅', '秧', '展', '珍', '朕', '案', '城', '恩', '容', '軒', '宴', '晏', '益', '祐', '育', '員'];
 
 document.getElementById("demo").innerHTML = names2.length;
 var pos2 = Math.floor((Math.random() * names2.length));
